0-common/3-sticky-sessions/manifests/stickysessions-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stickysessions
  labels:
    app.kubernetes.io/name: stickysessions
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-name: STICKYSESSION
spec:
  ingressClassName: nginx
  rules:
    - host: stickysession.k3s.test.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: stickysessions-service
                port:
                  number: 8080
